--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/offiza/todo-list#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "create-react-app": "^5.0.0",
     "epress": "^0.0.1-security",
     "express": "^4.17.3",
     "mongoose": "^6.2.10"
