--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "create-react-app": "^5.0.0",
+    "dotenv": "^16.0.0",
     "epress": "^0.0.1-security",
     "express": "^4.17.3",
     "mongoose": "^6.2.10"
