--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "homepage": "https://github.com/offiza/todo-list#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "create-react-app": "^5.0.0",
     "dotenv": "^16.0.0",
     "epress": "^0.0.1-security",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "mongoose": "^6.2.10"
   },
   "devDependencies": {
