--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "epress": "^0.0.1-security",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10"
   },
   "devDependencies": {
